# server/src/main/resources/openapi/reservoir.yaml
@@ -552,48 +552,48 @@ paths:
         schema:
           type: boolean
           default: true
-    post:
-      description: Upload MARC binary and MARCXML records.
-      operationId: uploadRecords
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                records:
-                  type: string
-                  format: binary
-            encoding:
-              records:
-                # MARC not that common (say .mrc) often defaults to application/octet-stream
-                contentType: application/octet-stream,application/marc,
-                  application/xml,text/xml
-          application/octet-stream:
-            schema:
-              type: string
-              format: binary
-          application/xml:
-            schema:
-              type: string
-              format: binary
-          text/xml:
-            schema:
-              type: string
-              format: binary
-      responses:
-        "200":
-          description: Records accepted.
-          content:
-            application/json:
-              schema:
-                $ref: schemas/ingestStatsByFile.json
-        "400":
-          $ref: "#/components/responses/trait_400"
-        "403":
-          $ref: "#/components/responses/trait_403"
-        "500":
-          $ref: "#/components/responses/trait_500"
+    # post:
+    #   description: Upload MARC binary and MARCXML records.
+    #   operationId: uploadRecords
+    #   requestBody:
+    #     content:
+    #       multipart/form-data:
+    #         schema:
+    #           type: object
+    #           properties:
+    #             records:
+    #               type: string
+    #               format: binary
+    #         encoding:
+    #           records:
+    #             # MARC not that common (say .mrc) often defaults to application/octet-stream
+    #             contentType: application/octet-stream,application/marc,
+    #               application/xml,text/xml
+    #       application/octet-stream:
+    #         schema:
+    #           type: string
+    #           format: binary
+    #       application/xml:
+    #         schema:
+    #           type: string
+    #           format: binary
+    #       text/xml:
+    #         schema:
+    #           type: string
+    #           format: binary
+    #   responses:
+    #     "200":
+    #       description: Records accepted.
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: schemas/ingestStatsByFile.json
+    #     "400":
+    #       $ref: "#/components/responses/trait_400"
+    #     "403":
+    #       $ref: "#/components/responses/trait_403"
+    #     "500":
+    #       $ref: "#/components/responses/trait_500"
   # Global Records retrieval and simple ingest
   /reservoir/records:
     parameters:
@@ -757,33 +757,33 @@ paths:
           $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
-  /reservoir/oai:
-    parameters:
-      - $ref: headers/okapi-tenant.yaml
-      - $ref: headers/okapi-token.yaml
-      - $ref: headers/okapi-url.yaml
-      - $ref: parameters/oai-identifier.yaml
-      - $ref: parameters/oai-from.yaml
-      - $ref: parameters/oai-list-limit.yaml
-      - $ref: parameters/oai-until.yaml
-      - $ref: parameters/oai-resumptionToken.yaml
-      - $ref: parameters/oai-set.yaml
-      - $ref: parameters/oai-verb.yaml
-      - $ref: parameters/oai-metadataPrefix.yaml
-    get:
-      description: OAI service
-      operationId: oaiService
-      responses:
-        "200":
-          description: OAI response (possibly with OAI error code)
-          content:
-            text/xml:
-              schema:
-                type: string
-        "400":
-          $ref: "#/components/responses/trait_400"
-        "500":
-          $ref: "#/components/responses/trait_500"
+  # /reservoir/oai:
+  #   parameters:
+  #     - $ref: headers/okapi-tenant.yaml
+  #     - $ref: headers/okapi-token.yaml
+  #     - $ref: headers/okapi-url.yaml
+  #     - $ref: parameters/oai-identifier.yaml
+  #     - $ref: parameters/oai-from.yaml
+  #     - $ref: parameters/oai-list-limit.yaml
+  #     - $ref: parameters/oai-until.yaml
+  #     - $ref: parameters/oai-resumptionToken.yaml
+  #     - $ref: parameters/oai-set.yaml
+  #     - $ref: parameters/oai-verb.yaml
+  #     - $ref: parameters/oai-metadataPrefix.yaml
+  #   get:
+  #     description: OAI service
+  #     operationId: oaiService
+  #     responses:
+  #       "200":
+  #         description: OAI response (possibly with OAI error code)
+  #         content:
+  #           text/xml:
+  #             schema:
+  #               type: string
+  #       "400":
+  #         $ref: "#/components/responses/trait_400"
+  #       "500":
+  #         $ref: "#/components/responses/trait_500"
   /reservoir/pmh-clients:
     parameters:
       - $ref: headers/okapi-tenant.yaml
@@ -951,31 +951,31 @@ paths:
           $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
-  /reservoir/sru:
-    parameters:
-      - $ref: headers/okapi-tenant.yaml
-      - $ref: headers/okapi-token.yaml
-      - $ref: headers/okapi-url.yaml
-      - $ref: parameters/query.yaml
-      - $ref: parameters/start-record.yaml
-      - $ref: parameters/maximum-records.yaml
-      - $ref: parameters/sru-version.yaml
-      - $ref: parameters/sru-operation.yaml
-      - $ref: parameters/sru-record-schema.yaml
-    get:
-      description: SRU service
-      operationId: sruService
-      responses:
-        "200":
-          description: SRU response
-          content:
-            text/xml:
-              schema:
-                type: string
-        "400":
-          $ref: "#/components/responses/trait_400"
-        "500":
-          $ref: "#/components/responses/trait_500"
+  # /reservoir/sru:
+  #   parameters:
+  #     - $ref: headers/okapi-tenant.yaml
+  #     - $ref: headers/okapi-token.yaml
+  #     - $ref: headers/okapi-url.yaml
+  #     - $ref: parameters/query.yaml
+  #     - $ref: parameters/start-record.yaml
+  #     - $ref: parameters/maximum-records.yaml
+  #     - $ref: parameters/sru-version.yaml
+  #     - $ref: parameters/sru-operation.yaml
+  #     - $ref: parameters/sru-record-schema.yaml
+  #   get:
+  #     description: SRU service
+  #     operationId: sruService
+  #     responses:
+  #       "200":
+  #         description: SRU response
+  #         content:
+  #           text/xml:
+  #             schema:
+  #               type: string
+  #       "400":
+  #         $ref: "#/components/responses/trait_400"
+  #       "500":
+  #         $ref: "#/components/responses/trait_500"
 # Reservoir error responses
 components:
   responses:
